--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
           </li>
           <li>
             🇧🇪 <a href="https://benevol2024.github.io">BENEVOL 2024</a> in Namur
-            <!-- (<a href="https://ceur-ws.org/Vol-3567">CEUR 3567</a>) -->
+            (<a href="https://ceur-ws.org/Vol-3941">CEUR 3941</a>)
           </li>
           <li>
             🇳🇱 <a href="https://benevol2023.github.io">BENEVOL 2023</a> in Nijmegen
@@ -366,7 +366,8 @@
           <li>🇳🇱 BENEVOL 2012 in Delft</li>
           <!-- https://www.slideshare.net/slideshow/benevol-2013-keynote-the-social-software-revolution/15480756 -->
           <li>🇧🇪 <a href="https://soft.vub.ac.be/benevol2011/">BENEVOL 2011</a> in Brussels</li>
-          <li>🇫🇷 <a href="https://researchr.org/conference/benevol-2010">BENEVOL 2010</a> in Lille</li>
+          <li>🇫🇷 <a href="https://web.archive.org/web/20120118115045/http://rmod.lille.inria.fr/benevol/">BENEVOL 2010</a> in Lille</li>
+          <!-- https://researchr.org/conference/benevol-2010 -->
           <li>🇧🇪 BENEVOL 2009 in Louvain-la-Neuve</li>
           <!-- https://www.cetic.be/CETIC-au-Workshop-BENEVOL-2009 -->
           <li>🇳🇱 <a href="https://www-set.win.tue.nl/benevol2008/">BENEVOL 2008</a> in Eindhoven</li>
