--- a/index.html
+++ b/index.html
@@ -274,22 +274,21 @@
 
         <h4>Important Dates</h4>
         <p class="text">
-          <i>TBA</i>
-          <!-- Below, you can find the important dates. <b>Please note that all dates are in the Anywhere on Earth (AoE, 23h59) calendar designation.</b> -->
+          Below, you can find the important dates. <b>Please note that all dates are in the Anywhere on Earth (AoE, 23:59) calendar designation.</b>
         </p>
-        <!-- <ul>
-            <li><b>Submission Deadline:</b> Mon 23 September 2025</li>
+        <ul>
+            <li><b>Submission Deadline:</b> Fri <strong style="color:red">26 September 2025</strong></li>
             <br>
-            <li><b>Author Notification Deadline:</b> Fri 25 October 2025</li>
+            <li><b>Author Notification Deadline:</b> Fri 24 October 2025</li>
             <br>
-            <li><b>Author Registration Deadline:</b> Fri 8 November 2025</li>
+            <li><b>Author Registration Deadline:</b> Sat 1 November 2025</li>
             <br>
-            <li><b>Camera-Ready Deadline (Presentation Abstracts/Posters):</b> Fri 8 November 2025</li>
+            <li><b>Camera-Ready Deadline:</b> Sat 1 November 2025</li>
             <br>
-            <li><b>Workshop Date:</b> Thu 21 - Fri 22 November 2025 </li>
-            <br>
-            <li><b>Camera-Ready Deadline (TECH/NICE papers):</b> Fri 13 December 2025</li>
-        </ul> -->
+            <li><b>Workshop Date:</b> Mon–Tue <strong style="color:red">17–18 November 2025</strong> </li>
+            <!-- <br> -->
+            <!-- <li><b>Camera-Ready Deadline (TECH/NICE papers):</b> Fri 13 December 2025</li> -->
+        </ul>
       </div>
     </div>
   </div>
