date more prominent; placeholder for the PC

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="inner2">
         <h2>The 24<sup>th</sup> <span class="hl">Be</span>lgium-<span class="hl">Ne</span>therlands
           Software E<span class="hl">vol</span>ution Workshop</h2>
-        <h2>Autumn 2025, Enschede, The Netherlands</h2>
+        <h2><span class="hl">17–18 November</span> 2025, Enschede, The Netherlands</h2>
       </div>
     </div>
   </div>
@@ -96,6 +96,109 @@
         </div>
     </section>
 -->
+
+<section id="cfp">
+  <div class="container">
+    <h2>Call for Papers</h2>
+    <hr>
+    <div class="row">
+      <div class="col">
+        <p class="text">
+          The goal of BENEVOL is to bring together researchers who are working in the field of software evolution and
+          maintenance. BENEVOL offers an informal forum to meet and discuss new ideas, relevant problems, and fresh
+          research results.
+        </p>
+        <br>
+        <h4>Submission Categories</h4>
+        <p class="text">
+          <b>Cutting-edge Original Research on Evolution (CORE).</b>
+          Full-length technical papers presenting original research which has been already empirically or formally
+          validated. We also welcome papers in the early stages of their development that would benefit from feedback
+          from the community.
+        </p>
+        <p class="text">
+          <b>Disruptive Ideas and Visionary Explorations (DIVE).</b>
+          We welcome position papers presenting new and potentially controversial software maintenance and evolution
+          perspectives. Such papers may not have an evaluation, though illustrative examples and cases are welcome.
+        </p>
+        <p class="text">
+          <b>Reproduced, Examined, or Analysed Papers (REAP).</b>
+          The growing complexity and size of software systems combined with the rise of machine learning for maintenance
+          and evolution tasks makes replicability challenging. We invite replication efforts of existing papers,
+          describing successes (replicated), difficulties (invalidated), or refinements (of any kind). This category
+          extends to new negative results, which are key to narrowing down hypotheses.
+        </p>
+        <p class="text">
+          <b>Summary of Highlights and Outstanding Work (SHOW).</b>
+          Presentation abstracts, progress reports, research results without inclusion in the proceedings. SHOW papers
+          cover research that has already been accepted for publication, is being reviewed to be published, or is almost
+          ready to be submitted to a conference or a journal.
+        </p>
+        <br>
+        <h4>Reviewing</h4>
+        <p class="text">
+          At least three programme committee members will review CORE, DIVE, and REAP papers. They will assess the
+          adherence to the workshop's scope (maintenance and evolution) and the above categories. Accepted papers will
+          be part of the proceedings. SHOW papers will only be reviewed for relevance and will be made available on the
+          workshop's website. BENEVOL follows the <strong>single-blind</strong> reviewing model.
+        </p>
+        <br>
+        <h4>Pages and Prospects</h4>
+        <ul>
+          <li><b>CORE &amp; REAP Papers:</b> 10 to 12 pages of main text + an unlimited number of pages for references
+            and appendices; to be invited to post-proceedings as full papers.
+          </li>
+          <li><b>DIVE Papers:</b> Maximum 5 pages + 4 pages for references and appendices; to be invited to
+            post-proceedings as full or short papers.
+          </li>
+          <li><b>SHOW Papers:</b> Maximum 2 pages, including references; not to be included in the post-proceedings.
+          </li>
+        </ul>
+        <br/>
+        <h4>Submission Guidelines</h4>
+        <p class="text">
+          All submissions must conform to the new CEUR-ART style. One can use the LaTeX template directly on <a
+            href="https://www.overleaf.com/read/gwhxnqcghhdt">Overleaf</a> or download an <a
+            href="http://ceur-ws.org/Vol-XXX/CEURART.zip">offline version</a> with the style files (including DOCX
+          template files). All submissions should use the <strong>single-column</strong> template.
+        </p>
+        <p class="text">
+          We allow using AI tools for writing assistance (grammar checkers, rephrasing). Of course, we explicitly forbid
+          LLM-generated papers as it may lead to plagiarism and may be regarded as unethical. Therefore, such tools
+          cannot be credited as authors. Please check the <a href="https://ceur-ws.org/ACADEMIC-ETHICS.html">CEUR-WS
+          Policy on AI assisting tools</a> for more information.
+        </p>
+        <p class="text">
+          Papers should be submitted via EasyChair. Please mark the category it belongs to. You can upload incremental
+          versions of your paper, so do not wait until the last minute to submit it.
+        </p>
+        <p class="text">
+          We will ask the authors to improve their paper and submit a camera-ready version according to the reviews.
+          Proceedings shall be submitted to <a href="http://ceur-ws.org/">CEUR-WS.org</a> for online publication.
+        </p>
+        <br/>
+
+        <h4>Important Dates</h4>
+        <p class="text">
+          Below, you can find the important dates. <b>Please note that all dates are in the Anywhere on Earth (AoE, 23:59) calendar designation.</b>
+        </p>
+        <ul>
+            <li><b>Submission Deadline:</b> Fri <strong style="color:red">26 September 2025</strong></li>
+            <br>
+            <li><b>Author Notification Deadline:</b> Fri 24 October 2025</li>
+            <br>
+            <li><b>Author Registration Deadline:</b> Sat 1 November 2025</li>
+            <br>
+            <li><b>Camera-Ready Deadline:</b> Sat 1 November 2025</li>
+            <br>
+            <li><b>Workshop Date:</b> Mon–Tue <strong style="color:red">17–18 November 2025</strong> </li>
+            <!-- <br> -->
+            <!-- <li><b>Camera-Ready Deadline (TECH/NICE papers):</b> Fri 13 December 2025</li> -->
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
 
 <section id="organisation">
   <div class="container">
@@ -182,113 +285,19 @@
           </a>
         </div>
       </div>
-      <div class="row">
-        <p class="text">
-          <i>...more to be announced...</i>
-        </p>
-      </div>
     </div>
   </div>
 </section>
 
-<section id="cfp">
+<section id="organisation">
   <div class="container">
-    <h2>Call for Papers</h2>
+    <h2>Programme Committee</h2>
     <hr>
-    <div class="row">
-      <div class="col">
+    <div class="col">
+      <div class="row">
         <p class="text">
-          The goal of BENEVOL is to bring together researchers who are working in the field of software evolution and
-          maintenance. BENEVOL offers an informal forum to meet and discuss new ideas, relevant problems, and fresh
-          research results.
+          <i>...more to be announced...</i>
         </p>
-        <br>
-        <h4>Submission Categories</h4>
-        <p class="text">
-          <b>Cutting-edge Original Research on Evolution (CORE).</b>
-          Full-length technical papers presenting original research which has been already empirically or formally
-          validated. We also welcome papers in the early stages of their development that would benefit from feedback
-          from the community.
-        </p>
-        <p class="text">
-          <b>Disruptive Ideas and Visionary Explorations (DIVE).</b>
-          We welcome position papers presenting new and potentially controversial software maintenance and evolution
-          perspectives. Such papers may not have an evaluation, though illustrative examples and cases are welcome.
-        </p>
-        <p class="text">
-          <b>Reproduced, Examined, or Analysed Papers (REAP).</b>
-          The growing complexity and size of software systems combined with the rise of machine learning for maintenance
-          and evolution tasks makes replicability challenging. We invite replication efforts of existing papers,
-          describing successes (replicated), difficulties (invalidated), or refinements (of any kind). This category
-          extends to new negative results, which are key to narrowing down hypotheses.
-        </p>
-        <p class="text">
-          <b>Summary of Highlights and Outstanding Work (SHOW).</b>
-          Presentation abstracts, progress reports, research results without inclusion in the proceedings. SHOW papers
-          cover research that has already been accepted for publication, is being reviewed to be published, or is almost
-          ready to be submitted to a conference or a journal.
-        </p>
-        <br>
-        <h4>Reviewing</h4>
-        <p class="text">
-          At least three programme committee members will review CORE, DIVE, and REAP papers. They will assess the
-          adherence to the workshop's scope (maintenance and evolution) and the above categories. Accepted papers will
-          be part of the proceedings. SHOW papers will only be reviewed for relevance and will be made available on the
-          workshop's website. BENEVOL follows the single-blind reviewing model.
-        </p>
-        <br>
-        <h4>Pages and Prospects</h4>
-        <ul>
-          <li><b>CORE &amp; REAP Papers:</b> 10 to 12 pages of main text + an unlimited number of pages for references
-            and appendices; to be invited to post-proceedings as full papers.
-          </li>
-          <li><b>DIVE Papers:</b> Maximum 5 pages + 4 pages for references and appendices; to be invited to
-            post-proceedings as full or short papers.
-          </li>
-          <li><b>SHOW Papers:</b> Maximum 2 pages, including references; not to be included in the post-proceedings.
-          </li>
-        </ul>
-        <br/>
-        <h4>Submission Guidelines</h4>
-        <p class="text">
-          All submissions must conform to the new CEUR-ART style. One can use the LaTeX template directly on <a
-            href="https://www.overleaf.com/read/gwhxnqcghhdt">Overleaf</a> or download an <a
-            href="http://ceur-ws.org/Vol-XXX/CEURART.zip">offline version</a> with the style files (including DOCX
-          template files). All submissions should use the single-column template.
-        </p>
-        <p class="text">
-          We allow using AI tools for writing assistance (grammar checkers, rephrasing). Of course, we explicitly forbid
-          LLM-generated papers as it may lead to plagiarism and may be regarded as unethical. Therefore, such tools
-          cannot be credited as authors. Please check the <a href="https://ceur-ws.org/ACADEMIC-ETHICS.html">CEUR-WS
-          Policy on AI assisting tools</a> for more information.
-        </p>
-        <p class="text">
-          Papers should be submitted via EasyChair. Please mark the category it belongs to. You can upload incremental
-          versions of your paper, so do not wait until the last minute to submit it.
-        </p>
-        <p class="text">
-          We will ask the authors to improve their paper and submit a camera-ready version according to the reviews.
-          Proceedings shall be submitted to <a href="http://ceur-ws.org/">CEUR-WS.org</a> for online publication.
-        </p>
-        <br/>
-
-        <h4>Important Dates</h4>
-        <p class="text">
-          Below, you can find the important dates. <b>Please note that all dates are in the Anywhere on Earth (AoE, 23:59) calendar designation.</b>
-        </p>
-        <ul>
-            <li><b>Submission Deadline:</b> Fri <strong style="color:red">26 September 2025</strong></li>
-            <br>
-            <li><b>Author Notification Deadline:</b> Fri 24 October 2025</li>
-            <br>
-            <li><b>Author Registration Deadline:</b> Sat 1 November 2025</li>
-            <br>
-            <li><b>Camera-Ready Deadline:</b> Sat 1 November 2025</li>
-            <br>
-            <li><b>Workshop Date:</b> Mon–Tue <strong style="color:red">17–18 November 2025</strong> </li>
-            <!-- <br> -->
-            <!-- <li><b>Camera-Ready Deadline (TECH/NICE papers):</b> Fri 13 December 2025</li> -->
-        </ul>
       </div>
     </div>
   </div>
