--- a/index.html
+++ b/index.html
@@ -295,9 +295,59 @@
     <hr>
     <div class="col">
       <div class="row">
-        <p class="text">
-          <i>...more to be announced...</i>
-        </p>
+          <ul>
+            <li>
+              <a href="https://alexandernolte.github.io">Alexander Nolte</a>, Eindhoven University of Technology, Netherlands
+            </li>
+            <li>
+              <a href="https://www.tue.nl/en/research/researchers/alexander-serebrenik">Alexander Serebrenik</a>, Eindhoven University of Technology, Netherlands
+            </li>
+            <li>
+              <a href="https://decan.lexpage.net">Alexandre Decan</a>, University of Mons, Belgium
+            </li>
+            <li>
+              <a href="https://www.uva.nl/en/profile/o/p/a.m.oprescu/a.m.oprescu.html?cb">Ana-Maria Oprescu</a>, University of Amsterdam, Netherlands
+            </li>
+            <li>
+              <a href="https://www.rug.nl/staff/a.capiluppi/?lang=en">Andrea Capiluppi</a>, University of Groningen, Netherlands
+            </li>
+            <li>
+              <a href="https://aranega.github.io/author/anne-etien/">Anne Etien</a>, University of Lille, France
+            </li>
+            <li>
+              <a href="https://carolin-brandt.de">Carolin Brandt</a>, Delft University of Technology, Netherlands
+            </li>
+            <li>
+              <a href="http://soft.vub.ac.be/~cderoove/">Coen De Roover</a>, Vrije Universiteit Brussel, Belgium
+            </li>
+            <li>
+              <a href="http://fernandocastor.github.io">Fernando Castor</a>, University of Twente, Netherlands
+            </li>
+            <li>
+              <a href="https://www.johanfabry.be">Johan Fabry</a>, Raincode Labs, Belgium
+            </li>
+            <li>
+              <a href="https://lmove.github.io">Lina Ochoa-Venegas</a>, Eindhoven University of Technology, The Netherlands
+            </li>
+            <li>
+              <a href="https://mairieli.com">Mairieli Wessel</a>, Radboud University, Netherlands
+            </li>
+            <li>
+              <a href="https://mgerhold.personalweb.utwente.nl">Marcus Gerhold</a>, University of Twente, Netherlands
+            </li>
+            <li>
+              <a href="https://www.uantwerpen.be/en/staff/serge-demeyer/">Serge Demeyer</a>, Universiteit Antwerpen (ANSYMO), Belgium
+            </li>
+            <li>
+              <a href="https://siamakfarshidi.nl">Siamak Farshidi</a>, Wageningen University & Research, Netherlands
+            </li>
+            <li>
+              <a href="https://slingerjansen.nl/whats-in-a-name/">Slinger Jansen</a>, Utrecht University, Netherlands
+            </li>
+            <li>
+              <a href="https://research.vu.nl/en/persons/vincenzo-stoico">Vincenzo Stoico</a>, Vrije Universiteit Amsterdam
+            </li>
+          </ul>
       </div>
     </div>
   </div>
