Change section id

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
   </div>
 </section>
 
-<section id="organisation">
+<section id="committee">
   <div class="container">
     <h2>Programme Committee</h2>
     <hr>
