Add one more PC member and EasyChair link

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           Policy on AI assisting tools</a> for more information.
         </p>
         <p class="text">
-          Papers should be submitted via EasyChair. Please mark the category it belongs to. You can upload incremental
+          Papers should be submitted via <a href="https://easychair.org/conferences?conf=benevol2025">EasyChair</a>. Please mark the category it belongs to. You can upload incremental
           versions of your paper, so do not wait until the last minute to submit it.
         </p>
         <p class="text">
@@ -334,6 +334,9 @@
             </li>
             <li>
               <a href="https://mgerhold.personalweb.utwente.nl">Marcus Gerhold</a>, University of Twente, Netherlands
+            </li>
+            <li>
+              <a href="https://ropdeb.ee">Ruben Opdebeeck</a>, Vrije Universiteit Brussel, Belgium
             </li>
             <li>
               <a href="https://www.uantwerpen.be/en/staff/serge-demeyer/">Serge Demeyer</a>, Universiteit Antwerpen (ANSYMO), Belgium
