+ one more PC member

--- a/index.html
+++ b/index.html
@@ -321,6 +321,9 @@
               <a href="http://soft.vub.ac.be/~cderoove/">Coen De Roover</a>, Vrije Universiteit Brussel, Belgium
             </li>
             <li>
+              <a href="https://feitosa-daniel.github.io">Daniel Feitosa</a>, University of Groningen, Netherlands
+            </li>
+            <li>
               <a href="https://gsyc.urjc.es/~grex/">Gregorio Robles</a>, Universidad Rey Juan Carlos, Spain
             </li>
             <li>
