update (mostly about keynotes)

--- a/index.html
+++ b/index.html
@@ -79,15 +79,42 @@
   </div>
 </header>
 
-<!--
     <section id="keynotes">
         <div class="container">
             <h2>Keynotes</h2>
             <hr>
-            TBA
+            <div class="col">
+              <div class="row">
+                <div class="card">
+                  <a href="https://www.dariusblasband.com/">
+                    <img class="pic" src="img/darius.jpg" alt="Darius Blasband Picture">
+                  </a>
+                  <a href="https://www.dariusblasband.com/">
+                    <h5>Darius Blasband</h5>
+                    <p class="person">
+                      <b>Raincode</b><br/>
+                      Belgium
+                    </p>
+                  </a>
+                </div>
+                <div class="card">
+                  <a href="https://prg.is.titech.ac.jp/people/masuhara/">
+                    <img class="pic" src="img/hidehiko.jpg" alt="Hidehiko Masuhara Picture">
+                  </a>
+                  <a href="https://prg.is.titech.ac.jp/people/masuhara/">
+                    <h5>Hidehiko&nbsp;Masuhara</h5>
+                    <p class="person">
+                      <b>Institute of Science Tokyo</b><br/>
+                      Japan
+                    </p>
+                  </a>
+                </div>
+              </div>
+            </div>
         </div>
     </section>
     
+<!--
     <section id="program">
         <div class="container">
             <h2>Programme</h2>
@@ -437,19 +464,19 @@
           <!-- https://researchr.org/conference/benevol-2010 -->
           <li>🇧🇪 BENEVOL 2009 in Louvain-la-Neuve</li>
           <!-- https://www.cetic.be/CETIC-au-Workshop-BENEVOL-2009 -->
-          <li>🇳🇱 <a href="https://www-set.win.tue.nl/benevol2008/">BENEVOL 2008</a> in Eindhoven</li>
+          <li>🇳🇱 <a href="https://web.archive.org/web/20240219062714/https://www-set.win.tue.nl/benevol2008/">BENEVOL 2008</a> in Eindhoven</li>
           <li>🇧🇪 <a href="https://staff.info.unamur.be/acl/benevol/">BENEVOL 2007</a> in Namur</li>
           <li>🇳🇱 BENEVOL 2006 in Delft</li>
           <li>🇧🇪 <a href="https://web.archive.org/web/20061018002017/http://restructuring.ulb.ac.be/events/benevol4/">
             BENEVOL 2005'</a> in Brussels
           </li>
-          <li>🇳🇱 <a href="https://www.program-transformation.org/Transform/BenevolTwoThousandFive">
+          <li>🇳🇱 <a href="https://web.archive.org/web/20240911042015/http://www.program-transformation.org/Transform/BenevolTwoThousandFive">
             BENEVOL 2005</a> in Eindhoven
           </li>
-          <li>🇧🇪 <a href="https://www.program-transformation.org/Transform/BenevolTwoThousandFour">
+          <li>🇧🇪 <a href="https://web.archive.org/web/20240505190031/https://www.program-transformation.org/Transform/BenevolTwoThousandFour">
             BENEVOL 2004</a> in Antwerpen
           </li>
-          <li>🇳🇱 <a href="https://www.program-transformation.org/Transform/BenevolTwoThousandThree">
+          <li>🇳🇱 <a href="https://web.archive.org/web/20240715104741/https://www.program-transformation.org/Transform/BenevolTwoThousandThree">
             BENEVOL 2003</a> in Amsterdam
           </li>
         </ul>
