--- a/index.html
+++ b/index.html
@@ -200,8 +200,11 @@
           versions of your paper, so do not wait until the last minute to submit it.
         </p>
         <p class="text">
-          We will ask the authors to improve their paper and submit a camera-ready version according to the reviews.
-          Proceedings shall be submitted to <a href="http://ceur-ws.org/">CEUR-WS.org</a> for online publication.
+          We give the opportunity to authors to adjust their paper before the workshop
+          according to the reviews, to be shared thorugh this website. After the workshop,
+          there will be another opportunity to update the papers — based on reviews as well
+          as on the feedback received during your presentation and in discussions which followed.
+          Post-proceedings will be submitted to <a href="http://ceur-ws.org/">CEUR-WS.org</a> in early 2026.
         </p>
         <br/>
 
@@ -210,17 +213,17 @@
           Below, you can find the important dates. <b>Please note that all dates are in the Anywhere on Earth (AoE, 23:59) calendar designation.</b>
         </p>
         <ul>
-            <li><b>Submission Deadline:</b> Fri <strong style="color:red">3 October 2025</strong></li>
+            <li><b>Submission Deadline:</b> Fri 3 October 2025</li>
             <br>
             <li><b>Author Notification Deadline:</b> Fri 24 October 2025</li>
             <br>
-            <li><b>Author Registration Deadline:</b> Sat 1 November 2025</li>
+            <li><b>Author Registration Deadline:</b> <strong class="red">Fri 7 November 2025</strong></li>
             <br>
-            <li><b>Camera-Ready Deadline:</b> Sat 1 November 2025</li>
+            <li><b><strong class="grn">Pre</strong>-proceedings Camera-Ready Deadline:</b> Fri 7 November 2025</li>
             <br>
-            <li><b>Workshop Date:</b> Mon–Tue <strong style="color:red">17–18 November 2025</strong> </li>
-            <!-- <br> -->
-            <!-- <li><b>Camera-Ready Deadline (TECH/NICE papers):</b> Fri 13 December 2025</li> -->
+            <li><b>Workshop Date:</b> Mon–Tue <strong class="red">17–18 November 2025</strong> </li>
+            <br>
+            <li><b><strong class="grn">Post</strong>-proceedings Camera-Ready Deadline:</b> Fri 19 December 2025</li>
         </ul>
       </div>
     </div>
@@ -396,7 +399,7 @@
     <div class="row">
       <div class="col">
         <p class="text">
-          <i>TBA</i>
+          The hosting venue is the <a href="https://www.utwente.nl/en/contact/route/">University of Twente</a>, details to be announced soon.
         </p>
       </div>
     </div>
