--- a/index.html
+++ b/index.html
@@ -31,19 +31,17 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav">
-        <!--
         <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#keynotes">Keynotes</a>
+          <a class="nav-link js-scroll-trigger" href="#keynotes">Keynotes</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#program">Programme</a>
+          <a class="nav-link js-scroll-trigger" href="#program">Programme</a>
         </li>
-        -->
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#cfp">CFP</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#organisation">Organisation</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#cfp">Call for Papers</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#venue">Venue &amp; Registration</a>
@@ -79,50 +77,153 @@
   </div>
 </header>
 
-    <section id="keynotes">
-        <div class="container">
-            <h2>Keynotes</h2>
-            <hr>
-            <div class="col">
-              <div class="row">
-                <div class="card">
-                  <a href="https://www.dariusblasband.com/">
-                    <img class="pic" src="img/darius.jpg" alt="Darius Blasband Picture">
-                  </a>
-                  <a href="https://www.dariusblasband.com/">
-                    <h5>Darius Blasband</h5>
-                    <p class="person">
-                      <b>Raincode</b><br/>
-                      Belgium
-                    </p>
-                  </a>
-                </div>
-                <div class="card">
-                  <a href="https://prg.is.titech.ac.jp/people/masuhara/">
-                    <img class="pic" src="img/hidehiko.jpg" alt="Hidehiko Masuhara Picture">
-                  </a>
-                  <a href="https://prg.is.titech.ac.jp/people/masuhara/">
-                    <h5>Hidehiko&nbsp;Masuhara</h5>
-                    <p class="person">
-                      <b>Institute of Science Tokyo</b><br/>
-                      Japan
-                    </p>
-                  </a>
-                </div>
-              </div>
-            </div>
+<section id="keynotes">
+  <div class="container">
+    <h2>Keynotes</h2>
+    <hr>
+    <div class="col">
+      <div class="row">
+        <div class="card">
+          <a href="https://www.dariusblasband.com/">
+            <img class="pic" src="img/darius.jpg" alt="Darius Blasband Picture">
+          </a>
+          <a href="https://www.dariusblasband.com/">
+            <h5>Darius Blasband</h5>
+            <p class="person">
+              <b>Raincode</b><br/>
+              Belgium
+            </p>
+          </a>
         </div>
-    </section>
-    
-<!--
-    <section id="program">
-        <div class="container">
-            <h2>Programme</h2>
-            <hr>
-            TBA
+        <div class="card">
+          <a href="https://prg.is.titech.ac.jp/people/masuhara/">
+            <img class="pic" src="img/hidehiko.jpg" alt="Hidehiko Masuhara Picture">
+          </a>
+          <a href="https://prg.is.titech.ac.jp/people/masuhara/">
+            <h5>Hidehiko&nbsp;Masuhara</h5>
+            <p class="person">
+              <b>Institute of Science Tokyo</b><br/>
+              Japan
+            </p>
+          </a>
         </div>
-    </section>
--->
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="program">
+  <div class="container">
+    <h2>Programme</h2>
+    <div style="text-align: center;">(tentative & subject to change)</div>
+    <hr>
+    <div class="col">
+      <div class="row">
+        <p class="text">
+          Detailed schedule will be made available closer to the workshop date.
+        </p>
+      </div>
+
+      <div class="row">
+        <table class="table" style="width: 100%;">
+          <tbody>
+          <tr>
+            <th colspan="2" style="padding: 1em 0;">
+              <div class="big-day">17</div>
+              <div>Monday</div>
+              <div>November, 2025</div>
+            </th>
+          </tr>
+          <tr>
+            <td>09:00 – 10:00</td>
+            <td>Walk-in reception</td>
+          </tr>
+          <tr>
+            <td>10:00 – 11:00</td>
+            <td><strong>Keynote</strong></td>
+          </tr>
+          <tr>
+            <td>11:00 – 11:30</td>
+            <td>Break</td>
+          </tr>
+          <tr>
+            <td>11:30 – 12:30</td>
+            <td><strong>Presentation session</strong></td>
+          </tr>
+          <tr>
+            <td>12:30 – 14:00</td>
+            <td>Lunch</td>
+          </tr>
+          <tr>
+            <td>14:00 – 15:00</td>
+            <td><strong>Presentation session</strong>
+          </tr>
+          <tr>
+            <td>15:00 – 15:30</td>
+            <td>Break</td>
+          </tr>
+          <tr>
+            <td>15:30 – 16:30</td>
+            <td><strong>Presentation session</strong></td>
+          </tr>
+          <tr>
+            <td>17:00 onwards</td>
+            <td>Dinner + Social event</td>
+          </tr>
+
+          <tr>
+            <th colspan="2" style="padding: 1em 0;">
+              <div class="big-day">18</div>
+              <div>Tuesday</div>
+              <div>November, 2025</div>
+            </th>
+          </tr>
+          <tr>
+            <td>09:30 – 10:30</td>
+            <td><strong>Keynote</strong></td>
+          </tr>
+          <tr>
+            <td>10:30 – 11:00</td>
+            <td>Break</td>
+          </tr>
+          <tr>
+            <td>11:00 – 12:00</td>
+            <td><strong>Presentation session</strong></td>
+          </tr>
+          <tr>
+            <td>12:00 – 13:00</td>
+            <td>Lunch</td>
+          </tr>
+          <tr>
+            <td>13:00 – 14:00</td>
+            <td><strong>Presentation session</strong></td>
+          </tr>
+          <tr>
+            <td>14:00 – 14:30</td>
+            <td>Break</td>
+          </tr>
+          <tr>
+            <td>14:30 – 15:30</td>
+            <td><strong>Hackathon</strong></td>
+          </tr>
+          <tr>
+            <td>15:30 – 16:00</td>
+            <td>Break</td>
+          </tr>
+          <tr>
+            <td>16:00 – 17:00</td>
+            <td><strong>Presentation session</strong> + <strong>Hackathon results</strong></td>
+          </tr>
+          <tr>
+            <td>17:00 onwards</td>
+            <td>Closing</td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</section>
 
 <section id="cfp">
   <div class="container">
@@ -135,7 +236,7 @@
           maintenance. BENEVOL offers an informal forum to meet and discuss new ideas, relevant problems, and fresh
           research results.
         </p>
-        <br>
+        <br/>
         <h4>Submission Categories</h4>
         <p class="text">
           <b>Cutting-edge Original Research on Evolution (CORE).</b>
@@ -161,7 +262,7 @@
           cover research that has already been accepted for publication, is being reviewed to be published, or is almost
           ready to be submitted to a conference or a journal.
         </p>
-        <br>
+        <br/>
         <h4>Reviewing</h4>
         <p class="text">
           At least three programme committee members will review CORE, DIVE, and REAP papers. They will assess the
@@ -169,7 +270,7 @@
           be part of the proceedings. SHOW papers will only be reviewed for relevance and will be made available on the
           workshop's website. BENEVOL follows the <strong>single-blind</strong> reviewing model.
         </p>
-        <br>
+        <br/>
         <h4>Pages and Prospects</h4>
         <ul>
           <li><b>CORE &amp; REAP Papers:</b> 10 to 12 pages of main text + an unlimited number of pages for references
@@ -196,7 +297,8 @@
           Policy on AI assisting tools</a> for more information.
         </p>
         <p class="text">
-          Papers should be submitted via <a href="https://easychair.org/conferences?conf=benevol2025">EasyChair</a>. Please mark the category it belongs to. You can upload incremental
+          Papers should be submitted via <a href="https://easychair.org/conferences?conf=benevol2025">EasyChair</a>.
+          Please mark the category it belongs to. You can upload incremental
           versions of your paper, so do not wait until the last minute to submit it.
         </p>
         <p class="text">
@@ -207,20 +309,22 @@
 
         <h4>Important Dates</h4>
         <p class="text">
-          Below, you can find the important dates. <b>Please note that all dates are in the Anywhere on Earth (AoE, 23:59) calendar designation.</b>
+          Below, you can find the important dates. <b>Please note that all dates are in the Anywhere on Earth (AoE,
+          23:59) calendar designation.</b>
         </p>
         <ul>
-            <li><b>Submission Deadline:</b> Fri <strong style="color:red">3 October 2025</strong></li>
-            <br>
-            <li><b>Author Notification Deadline:</b> Fri 24 October 2025</li>
-            <br>
-            <li><b>Author Registration Deadline:</b> Sat 1 November 2025</li>
-            <br>
-            <li><b>Camera-Ready Deadline:</b> Sat 1 November 2025</li>
-            <br>
-            <li><b>Workshop Date:</b> Mon–Tue <strong style="color:red">17–18 November 2025</strong> </li>
-            <!-- <br> -->
-            <!-- <li><b>Camera-Ready Deadline (TECH/NICE papers):</b> Fri 13 December 2025</li> -->
+          <li style="text-decoration: line-through"><b>Submission Deadline:</b> Fri <strong style="color:red">3 October
+            2025</strong></li>
+          <br/>
+          <li style="text-decoration: line-through"><b>Author Notification Deadline:</b> Fri 24 October 2025</li>
+          <br/>
+          <li><b>Author Registration Deadline:</b> Sat 1 November 2025</li>
+          <br/>
+          <li><b>Camera-Ready Deadline:</b> Sat 1 November 2025</li>
+          <br/>
+          <li><b>Workshop Date:</b> Mon–Tue <strong style="color:red">17–18 November 2025</strong></li>
+          <!-- <br/> -->
+          <!-- <li><b>Camera-Ready Deadline (TECH/NICE papers):</b> Fri 13 December 2025</li> -->
         </ul>
       </div>
     </div>
@@ -322,68 +426,68 @@
     <hr>
     <div class="col">
       <div class="row">
-          <ul>
-            <li>
+        <ul>
+          <li>
               <a href="https://alexandernolte.github.io">Alexander Nolte</a>, Eindhoven University of Technology, Netherlands
-            </li>
-            <li>
+          </li>
+          <li>
               <a href="https://www.tue.nl/en/research/researchers/alexander-serebrenik">Alexander Serebrenik</a>, Eindhoven University of Technology, Netherlands
-            </li>
-            <li>
-              <a href="https://decan.lexpage.net">Alexandre Decan</a>, University of Mons, Belgium
-            </li>
-            <li>
+          </li>
+          <li>
+            <a href="https://decan.lexpage.net">Alexandre Decan</a>, University of Mons, Belgium
+          </li>
+          <li>
               <a href="https://www.uva.nl/en/profile/o/p/a.m.oprescu/a.m.oprescu.html?cb">Ana-Maria Oprescu</a>, University of Amsterdam, Netherlands
-            </li>
-            <li>
+          </li>
+          <li>
               <a href="https://www.rug.nl/staff/a.capiluppi/?lang=en">Andrea Capiluppi</a>, University of Groningen, Netherlands
-            </li>
-            <li>
-              <a href="https://aranega.github.io/author/anne-etien/">Anne Etien</a>, University of Lille, France
-            </li>
-            <li>
-              <a href="https://carolin-brandt.de">Carolin Brandt</a>, Delft University of Technology, Netherlands
-            </li>
-            <li>
-              <a href="http://soft.vub.ac.be/~cderoove/">Coen De Roover</a>, Vrije Universiteit Brussel, Belgium
-            </li>
-            <li>
-              <a href="https://feitosa-daniel.github.io">Daniel Feitosa</a>, University of Groningen, Netherlands
-            </li>
-            <li>
-              <a href="https://gsyc.urjc.es/~grex/">Gregorio Robles</a>, Universidad Rey Juan Carlos, Spain
-            </li>
-            <li>
-              <a href="http://fernandocastor.github.io">Fernando Castor</a>, University of Twente, Netherlands
-            </li>
-            <li>
-              <a href="https://www.johanfabry.be">Johan Fabry</a>, Raincode Labs, Belgium
-            </li>
-            <li>
+          </li>
+          <li>
+            <a href="https://aranega.github.io/author/anne-etien/">Anne Etien</a>, University of Lille, France
+          </li>
+          <li>
+            <a href="https://carolin-brandt.de">Carolin Brandt</a>, Delft University of Technology, Netherlands
+          </li>
+          <li>
+            <a href="http://soft.vub.ac.be/~cderoove/">Coen De Roover</a>, Vrije Universiteit Brussel, Belgium
+          </li>
+          <li>
+            <a href="https://feitosa-daniel.github.io">Daniel Feitosa</a>, University of Groningen, Netherlands
+          </li>
+          <li>
+            <a href="https://gsyc.urjc.es/~grex/">Gregorio Robles</a>, Universidad Rey Juan Carlos, Spain
+          </li>
+          <li>
+            <a href="http://fernandocastor.github.io">Fernando Castor</a>, University of Twente, Netherlands
+          </li>
+          <li>
+            <a href="https://www.johanfabry.be">Johan Fabry</a>, Raincode Labs, Belgium
+          </li>
+          <li>
               <a href="https://lmove.github.io">Lina Ochoa-Venegas</a>, Eindhoven University of Technology, The Netherlands
-            </li>
-            <li>
-              <a href="https://mairieli.com">Mairieli Wessel</a>, Radboud University, Netherlands
-            </li>
-            <li>
-              <a href="https://mgerhold.personalweb.utwente.nl">Marcus Gerhold</a>, University of Twente, Netherlands
-            </li>
-            <li>
-              <a href="https://ropdeb.ee">Ruben Opdebeeck</a>, Vrije Universiteit Brussel, Belgium
-            </li>
-            <li>
+          </li>
+          <li>
+            <a href="https://mairieli.com">Mairieli Wessel</a>, Radboud University, Netherlands
+          </li>
+          <li>
+            <a href="https://mgerhold.personalweb.utwente.nl">Marcus Gerhold</a>, University of Twente, Netherlands
+          </li>
+          <li>
+            <a href="https://ropdeb.ee">Ruben Opdebeeck</a>, Vrije Universiteit Brussel, Belgium
+          </li>
+          <li>
               <a href="https://www.uantwerpen.be/en/staff/serge-demeyer/">Serge Demeyer</a>, Universiteit Antwerpen (ANSYMO), Belgium
-            </li>
-            <li>
-              <a href="https://siamakfarshidi.nl">Siamak Farshidi</a>, Wageningen University & Research, Netherlands
-            </li>
-            <li>
-              <a href="https://slingerjansen.nl/whats-in-a-name/">Slinger Jansen</a>, Utrecht University, Netherlands
-            </li>
-            <li>
+          </li>
+          <li>
+            <a href="https://siamakfarshidi.nl">Siamak Farshidi</a>, Wageningen University & Research, Netherlands
+          </li>
+          <li>
+            <a href="https://slingerjansen.nl/whats-in-a-name/">Slinger Jansen</a>, Utrecht University, Netherlands
+          </li>
+          <li>
               <a href="https://research.vu.nl/en/persons/vincenzo-stoico">Vincenzo Stoico</a>, Vrije Universiteit Amsterdam
-            </li>
-          </ul>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
