--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
       </div>
 
       <div class="row">
-        <table class="table" style="width: 100%;">
+        <table class="table sch">
           <tbody>
           <tr>
-            <th colspan="2" style="padding: 1em 0;">
+            <th colspan="2">
               <div class="big-day">17</div>
               <div>Monday</div>
               <div>November, 2025</div>
@@ -148,7 +148,30 @@
           </tr>
           <tr>
             <td>11:30 – 12:30</td>
-            <td><strong>Presentation session</strong></td>
+            <td><strong>Efficiency and Intelligence in Code Generation</strong></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td>
+              <table class="sch">
+                <tr>
+                  <td>[🔬] 11:30 – 11:50</td>
+                  <td><em>An Introduction to Indirect Code Completion</em></td>
+                </tr>
+                <tr>
+                  <td>[🌟] 11:50 – 12:00</td>
+                  <td><em>Same Size, Different Costs</em></td>
+                </tr>
+                <tr>
+                  <td>[🌟] 12:00 – 12:10</td>
+                  <td><em>The Cost of AI-Assisted Coding</em></td>
+                </tr>
+                <tr>
+                  <td>[🚀] 12:10 – 12:30</td>
+                  <td><em>Bridging CPU and GPU in Rust</em></td>
+                </tr>
+              </table>
+            </td>
           </tr>
           <tr>
             <td>12:30 – 14:00</td>
@@ -156,7 +179,34 @@
           </tr>
           <tr>
             <td>14:00 – 15:00</td>
-            <td><strong>Presentation session</strong>
+            <td><strong>Mining and Modelling of Software Knowledge</strong>
+          </tr>
+          <tr>
+            <td></td>
+            <td>
+              <table class="sch">
+                <tr>
+                  <td>[🌟] 14:00 – 14:10</td>
+                  <td><em>Sampling Threat when Mining Generalizable Inter-Library Usage Patterns</em></td>
+                </tr>
+                <tr>
+                  <td>[🌟] 14:10 – 14:20</td>
+                  <td><em>Analysis of Code Clones in GitHub Actions Workflows</em></td>
+                </tr>
+                <tr>
+                  <td>[🌟] 14:20 – 14:30</td>
+                  <td><em>Determining Code Proficiency Levels from Python Textbooks</em></td>
+                </tr>
+                <tr>
+                  <td>[🔬] 14:30 – 14:50</td>
+                  <td><em>Building Reliable Interfaces for Developer Guidance and Exploration</em></td>
+                </tr>
+                <tr>
+                  <td>[🌟] 14:50 – 15:00</td>
+                  <td><em>On the Automation and Reuse Practices in GitHub Actions</em></td>
+                </tr>
+              </table>
+            </td>
           </tr>
           <tr>
             <td>15:00 – 15:30</td>
@@ -164,15 +214,36 @@
           </tr>
           <tr>
             <td>15:30 – 16:30</td>
-            <td><strong>Presentation session</strong></td>
+            <td><strong>Software Testing</strong></td>
           </tr>
           <tr>
-            <td>17:00 onwards</td>
+            <td></td>
+            <td>
+              <table class="sch">
+                <tr>
+                  <td>[🚀] 15:30 – 15:50</td>
+                  <td><em>Preliminary Survey on CPS Testing in Various Domains of the Industry</em></td>
+                </tr>
+                <tr>
+                  <td>[🔬] 15:50 – 16:10</td>
+                  <td><em>A Framework for Generation of Synthetic Data to Compare Flakiness Scores</em></td>
+                </tr>
+                <tr>
+                  <td>[🔁] 16:10 – 16:30</td>
+                  <td><em>Evaluating Test-Driven Code Generation: A Replication Study</em></td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <tr>
+            <td>17:00 +</td>
             <td>Dinner + Social event</td>
           </tr>
-
+          <tr class="sep">
+            <td>&nbsp;</td>
+          </tr>
           <tr>
-            <th colspan="2" style="padding: 1em 0;">
+            <th colspan="2">
               <div class="big-day">18</div>
               <div>Tuesday</div>
               <div>November, 2025</div>
@@ -188,7 +259,34 @@
           </tr>
           <tr>
             <td>11:00 – 12:00</td>
-            <td><strong>Presentation session</strong></td>
+            <td><strong>Evolving Software Ecosystems</strong></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td>
+              <table class="sch">
+                <tr>
+                  <td>[🔬] 11:00 – 11:20</td>
+                  <td><em>On the Evolution of Direct Dependencies in npm Packages</em></td>
+                </tr>
+                <tr>
+                  <td>[🌟] 11:20 – 11:30</td>
+                  <td><em>An Empirical Analysis of the GitHub Actions Language Usage and Evolution</em></td>
+                </tr>
+                <tr>
+                  <td>[🌟] 11:30 – 11:40</td>
+                  <td><em>Language-Level Support for Multiple Versions for Software Evolution</em></td>
+                </tr>
+                <tr>
+                  <td>[🌟] 11:40 – 11:50</td>
+                  <td><em>On the Transferability of a Bot Detection Model from GitHub to GitLab</em></td>
+                </tr>
+                <tr>
+                  <td>[🌟] 11:50 – 12:00</td>
+                  <td><em>Evolution-Resilient Class Contours</em></td>
+                </tr>
+              </table>
+            </td>
           </tr>
           <tr>
             <td>12:00 – 13:00</td>
@@ -196,7 +294,7 @@
           </tr>
           <tr>
             <td>13:00 – 14:00</td>
-            <td><strong>Presentation session</strong></td>
+            <td><strong>Hackathon</strong></td>
           </tr>
           <tr>
             <td>14:00 – 14:30</td>
@@ -204,7 +302,26 @@
           </tr>
           <tr>
             <td>14:30 – 15:30</td>
-            <td><strong>Hackathon</strong></td>
+            <td><strong>Structure and Visualisation in Evolving Software Systems</strong></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td>
+              <table class="sch">
+                <tr>
+                  <td>[🚀] 14:30 – 14:50</td>
+                  <td><em>On the Structuring of L<sup>A</sup>T<sub>E</sub>X Projects</em></td>
+                </tr>
+                <tr>
+                  <td>[🚀] 14:50 – 15:10</td>
+                  <td><em>From Verification Tool to Research Vessel</em></td>
+                </tr>
+                <tr>
+                  <td>[🔬] 15:10 – 15:30</td>
+                  <td><em>Pseudonymization as a Service</em></td>
+                </tr>
+              </table>
+            </td>
           </tr>
           <tr>
             <td>15:30 – 16:00</td>
@@ -212,7 +329,7 @@
           </tr>
           <tr>
             <td>16:00 – 17:00</td>
-            <td><strong>Presentation session</strong> + <strong>Hackathon results</strong></td>
+            <td><strong>TBA</strong> + <strong>Hackathon results</strong></td>
           </tr>
           <tr>
             <td>17:00 onwards</td>
@@ -239,25 +356,25 @@
         <br/>
         <h4>Submission Categories</h4>
         <p class="text">
-          <b>Cutting-edge Original Research on Evolution (CORE).</b>
+          <b>Cutting-edge Original Research on Evolution (🔬CORE).</b>
           Full-length technical papers presenting original research which has been already empirically or formally
           validated. We also welcome papers in the early stages of their development that would benefit from feedback
           from the community.
         </p>
         <p class="text">
-          <b>Disruptive Ideas and Visionary Explorations (DIVE).</b>
+          <b>Disruptive Ideas and Visionary Explorations (🚀DIVE).</b>
           We welcome position papers presenting new and potentially controversial software maintenance and evolution
           perspectives. Such papers may not have an evaluation, though illustrative examples and cases are welcome.
         </p>
         <p class="text">
-          <b>Reproduced, Examined, or Analysed Papers (REAP).</b>
+          <b>Reproduced, Examined, or Analysed Papers (🔁REAP).</b>
           The growing complexity and size of software systems combined with the rise of machine learning for maintenance
           and evolution tasks makes replicability challenging. We invite replication efforts of existing papers,
           describing successes (replicated), difficulties (invalidated), or refinements (of any kind). This category
           extends to new negative results, which are key to narrowing down hypotheses.
         </p>
         <p class="text">
-          <b>Summary of Highlights and Outstanding Work (SHOW).</b>
+          <b>Summary of Highlights and Outstanding Work (🌟SHOW).</b>
           Presentation abstracts, progress reports, research results without inclusion in the proceedings. SHOW papers
           cover research that has already been accepted for publication, is being reviewed to be published, or is almost
           ready to be submitted to a conference or a journal.
@@ -265,27 +382,27 @@
         <br/>
         <h4>Reviewing</h4>
         <p class="text">
-          At least three programme committee members will review CORE, DIVE, and REAP papers. They will assess the
+          At least three programme committee members will review 🔬CORE, 🚀DIVE, and 🔁REAP papers. They will assess the
           adherence to the workshop's scope (maintenance and evolution) and the above categories. Accepted papers will
-          be part of the proceedings. SHOW papers will only be reviewed for relevance and will be made available on the
+          be part of the proceedings. 🌟SHOW papers will only be reviewed for relevance and will be made available on the
           workshop's website. BENEVOL follows the <strong>single-blind</strong> reviewing model.
         </p>
         <br/>
         <h4>Pages and Prospects</h4>
         <ul>
-          <li><b>CORE &amp; REAP Papers:</b> 10 to 12 pages of main text + an unlimited number of pages for references
+          <li><b>🔬CORE &amp; 🔁REAP Papers:</b> 10 to 12 pages of main text + an unlimited number of pages for references
             and appendices; to be invited to post-proceedings as full papers.
           </li>
-          <li><b>DIVE Papers:</b> Maximum 5 pages + 4 pages for references and appendices; to be invited to
+          <li><b>🚀DIVE Papers:</b> Maximum 5 pages + 4 pages for references and appendices; to be invited to
             post-proceedings as full or short papers.
           </li>
-          <li><b>SHOW Papers:</b> Maximum 2 pages, including references; not to be included in the post-proceedings.
+          <li><b>🌟SHOW Papers:</b> Maximum 2 pages, including references; not to be included in the post-proceedings.
           </li>
         </ul>
         <br/>
         <h4>Submission Guidelines</h4>
         <p class="text">
-          All submissions must conform to the new CEUR-ART style. One can use the LaTeX template directly on <a
+          All submissions must conform to the new CEUR-ART style. One can use the <span class="latex">L<sup>A</sup>T<sub>E</sub>X</span> template directly on <a
             href="https://www.overleaf.com/read/gwhxnqcghhdt">Overleaf</a> or download an <a
             href="http://ceur-ws.org/Vol-XXX/CEURART.zip">offline version</a> with the style files (including DOCX
           template files). All submissions should use the <strong>single-column</strong> template.
